<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_8sdp"
    app:cardBackgroundColor="@color/colorPrimary"
    android:layout_marginEnd="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_2sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_5sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/date"/>
            <TextView
                android:id="@+id/date_tv"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/date"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/time"/>
            <TextView
                android:id="@+id/time_tv"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/yellow" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:weightSum="2"
            android:orientation="vertical">
            <TextView
                android:layout_weight="1"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/poll_question"/>
            <TextView
                android:id="@+id/voteQuestion"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/open_sans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vote"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:weightSum="2"
            android:orientation="vertical">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/yellow"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/Result"/>
            <TextView
                android:id="@+id/answer"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poll_history"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>